--- a/dcbs/src/main/resources/messages.properties
+++ b/dcbs/src/main/resources/messages.properties
@@ -1,10 +1,12 @@
 #ERROR MESSAGES
 dcbs.err.no.acc.found=No account details found for the particular account.
 dcbs.err.no.acc.num.found=Please enter account number to retrieve details.
-dcbs.err.no.acc.for.user=No account details found for the particular user.
-dcbs.own.error=Need at least two accounts to do the own account transaction.
+dcbs.err.no.acc.for.user=No account details found for the user Id.
+dcbs.own.error=Need at least two accounts to do the own account transaction. Please check your account details and user Id.
 dcbs.invalid.transaction=Invalid Transaction.Please check Fund Transfer Type.
 dcbs.insufficient.balance=Transaction failed due to insufficient account balance.
-dcbs.fund.no.acc.found=Transaction failed. please check account your account numbers.
+dcbs.fund.no.acc.found=Transaction failed. please check your account numbers.
+dcbs.acc.not.own=Transaction failed source account not belongs to this user .please check account your from account number and user Id.
+dcbs.acc.not.founf.thirdparty=Transaction failed beneficiary account (toAccount) not found.
 #SUCCESS MESSAGES
 dcbs.success=Transaction Successfully completed.
